--- a/app/src/main/res/layout/buy_input_product_home_card.xml
+++ b/app/src/main/res/layout/buy_input_product_home_card.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_round_white"
-    android:layout_margin="15dp">
+    android:background="@drawable/rounded_corners_edittext_white">
     <LinearLayout
         android:id="@+id/product_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="12dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,14 +28,14 @@
             <ImageView
                 android:id="@+id/product_cover"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/dimen_10dp"
+                android:layout_height="80dp"
+                android:layout_margin="5dp"
                 android:src="@drawable/placeholder" />
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/shimmerFrame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:alpha=".7"
                 app:shimmer_duration="1500">
                 <ImageView
@@ -55,7 +57,8 @@
                 android:padding="6dp"
                 android:text="16% OFF"
                 android:textColor="@android:color/white"
-                app:autoSizeTextType="uniform" />
+                app:autoSizeTextType="uniform"
+                android:layout_alignParentEnd="true"/>
 
         </RelativeLayout>
         <TextView
@@ -64,28 +67,30 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:text="@string/product_title"
-            android:textColor="@color/textColorSecondary"/>
+            android:textColor="#31244A"/>
 
         <RelativeLayout
             android:id="@+id/product_like_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginEnd="13dp">
 
         <ImageView
             android:id="@+id/first_star"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_centerVertical="true"
             app:srcCompat="@drawable/ic_star_rate"
             tools:ignore="VectorDrawableCompat" />
 
         <ImageView
             android:id="@+id/second_star"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/first_star"
             app:srcCompat="@drawable/ic_star_rate"
@@ -94,8 +99,8 @@
 
         <ImageView
             android:id="@+id/third_star"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/second_star"
             app:srcCompat="@drawable/ic_star_rate"
@@ -103,8 +108,8 @@
 
         <ImageView
             android:id="@+id/fourth_star"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/third_star"
             app:srcCompat="@drawable/ic_star_rate"
@@ -112,8 +117,8 @@
 
         <ImageView
             android:id="@+id/fifth_star"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/fourth_star"
             app:srcCompat="@drawable/ic_star_border"
@@ -130,7 +135,7 @@
             android:fontFamily="@font/josefin_sans"
             android:maxLines="1"
             android:text="430 Ratings"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:gravity="center"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -144,7 +149,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/josefin_sans"
                 android:text="UGX : 15,000"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/product_price_new"
@@ -153,7 +159,8 @@
                 android:layout_marginTop="@dimen/dimen_5dp"
                 android:fontFamily="@font/josefin_sans"
                 android:text="UGX : 1,200"
-                android:textColor="@android:color/black"
+                android:textSize="12sp"
+                android:textColor="#6D6D6D"
                 android:textStyle="bold"
                 android:gravity="center"/>
 
