--- a/app/src/main/res/layout/buy_inputs_product_description.xml
+++ b/app/src/main/res/layout/buy_inputs_product_description.xml
@@ -6,7 +6,7 @@
     xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/windowBackground"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical">
@@ -40,10 +40,10 @@
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/product_cover_slider"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/white"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/windowBackground"
                     custom:auto_cycle="true"
                     custom:indicator_visibility="visible" />
 
@@ -79,7 +79,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layout_weights"
-                    android:background="@color/white"
                     android:gravity="start"
                     android:maxLines="3"
                     android:paddingStart="20dp"
@@ -95,7 +94,6 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/product_title"
                     android:layout_marginTop="15dp"
-                    android:background="@color/white"
                     android:paddingStart="20dp"
                     android:paddingEnd="20dp">
 
@@ -494,7 +492,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
                 android:orientation="vertical">
 
                 <LinearLayout
