--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -5,10 +5,103 @@
     android:layout_height="match_parent"
     tools:context=".SellFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/gray">
+
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout_sell_produce_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/opaqueWhite"
+                app:tabIndicatorHeight="4dp"
+                app:tabMaxWidth="0dp"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextAppearance="@style/textAppearance_view_pager"
+                app:tabTextColor="@color/opaqueWhite" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager_sell_produce_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        </androidx.viewpager.widget.ViewPager>
+
+        <!--        <ScrollView-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_marginTop="?attr/actionBarSize"-->
+        <!--            android:background="@color/gray"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:orientation="vertical">-->
+
+        <!--                <androidx.cardview.widget.CardView-->
+        <!--                    android:id="@+id/sell_produce"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:layout_marginStart="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginTop="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginEnd="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginBottom="@dimen/dimen_20dp"-->
+        <!--                    app:cardCornerRadius="@dimen/dimen_5dp"-->
+        <!--                    app:cardElevation="@dimen/dimen_5dp">-->
+
+        <!--                    <LinearLayout-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:background="@color/white"-->
+        <!--                        android:orientation="vertical">-->
+
+        <!--                        <ImageView-->
+        <!--                            android:layout_width="wrap_content"-->
+        <!--                            android:layout_height="wrap_content"-->
+        <!--                            android:layout_gravity="center"-->
+        <!--                            android:layout_marginTop="@dimen/margin_15"-->
+        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+        <!--                            android:src="@drawable/ic_sell_produce" />-->
+
+        <!--                        <TextView-->
+        <!--                            android:layout_width="match_parent"-->
+        <!--                            android:layout_height="0dp"-->
+        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+        <!--                            android:layout_weight="0.5"-->
+        <!--                            android:fontFamily="@font/josefin_sans"-->
+        <!--                            android:text="Sell Produce"-->
+        <!--                            android:textAlignment="center"-->
+        <!--                            android:textAllCaps="true"-->
+        <!--                            android:textColor="@android:color/black"-->
+        <!--                            android:textSize="15sp" />-->
+        <!--                    </LinearLayout>-->
+
+        <!--                </androidx.cardview.widget.CardView>-->
+
+        <!--            </LinearLayout>-->
+
+        <!--        </ScrollView>-->
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </FrameLayout>
