--- a/app/src/main/res/layout/fragment_market_price.xml
+++ b/app/src/main/res/layout/fragment_market_price.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context="com.cabral.emaishapay.fragments.sell.MarketPriceFragment">
+    tools:context="com.cabral.emaishapay.fragments.sell_fragment.MarketPriceFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
