--- a/app/src/main/res/layout-ldrtl/dialog_product_rating_reviews.xml
+++ b/app/src/main/res/layout-ldrtl/dialog_product_rating_reviews.xml
@@ -2,42 +2,40 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/windowBackground"
+    android:orientation="vertical"
+    tools:ignore="MissingDefaultResource">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="?actionBarSize"
         android:background="@color/colorPrimary">
 
         <ImageButton
             android:id="@+id/dialog_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:padding="16dp"
             app:srcCompat="@drawable/ic_arrow_back"
             android:tint="@color/white"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="72dp"
+            android:layout_centerInParent="true"
             android:text="@string/reviews_ratings"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="72dp"
-            android:layout_alignParentLeft="true" />
+            android:textStyle="bold" />
     </RelativeLayout>
 
 
@@ -272,7 +270,7 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_weight="0"
-        android:background="@color/colorAccentGreen"
+        android:background="@color/colorPrimary"
         android:text="@string/rate_product"
         android:textAllCaps="true"
         android:textColor="@color/white"
