--- a/app/src/main/res/layout/buy_inputs_dialog_maintenance.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_maintenance.xml
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorAccentGreen">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/dialog_title"
@@ -66,7 +66,7 @@
             android:textColor="@color/white"
             android:gravity="center"
             android:layout_gravity="end"
-            android:background="@drawable/rounded_corners_button_accent" />
+            android:background="@drawable/rectangular_green_solid" />
 
     </LinearLayout>
 
