--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/dialog_background">
 
 
     <LinearLayout
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorAccentGreen">
+        android:background="@drawable/top_rounded_blue">
 
         <TextView
             android:id="@+id/dialog_title"
@@ -36,7 +36,7 @@
         <EditText
             android:id="@+id/current_password"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/input_field_height"
+            android:layout_height="45dp"
             android:hint="@string/current_password"
             android:inputType="textPassword|textNoSuggestions"
             android:textColor="@color/textColorSecondary"
@@ -48,12 +48,12 @@
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
-            android:background="@drawable/rounded_corners_edittext_dark"
+            android:background="@drawable/edittext_corner"
             android:drawableLeft="@drawable/ic_lock" />
         <EditText
             android:id="@+id/new_password"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/input_field_height"
+            android:layout_height="45dp"
             android:hint="@string/new_password"
             android:inputType="textPassword|textNoSuggestions"
             android:textColor="@color/textColorSecondary"
@@ -65,7 +65,7 @@
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
-            android:background="@drawable/rounded_corners_edittext_dark"
+            android:background="@drawable/edittext_corner"
             android:drawableLeft="@drawable/ic_lock" />
 
     </LinearLayout>
@@ -87,7 +87,7 @@
             android:textColor="@color/white"
             android:textAlignment="center"
             android:layout_gravity="center"
-            android:background="@drawable/rounded_corners_button_accent" />
+            android:background="@drawable/rectangular_green_solid" />
 
     </LinearLayout>
 
