--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/dialog_background">
 
 
     <LinearLayout
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorAccentGreen">
+        android:background="@drawable/top_rounded_blue">
 
         <TextView
             android:id="@+id/dialog_title"
@@ -61,21 +61,21 @@
             android:textAlignment="center"
             android:layout_marginEnd="10dp"
             android:textColor="@color/white"
-            android:background="@drawable/rounded_corners_button_gray"
-            android:gravity="center_horizontal"
+            android:background="@drawable/rectangular_red_solid"
+            android:gravity="center"
             android:layout_marginRight="10dp" />
 
         <Button
             android:id="@+id/dialog_button_positive"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:text="@string/ok"
+            android:text="Ok"
             android:textAllCaps="false"
             android:textSize="16sp"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:background="@drawable/rounded_corners_button_accent"
-            android:gravity="center_horizontal" />
+            android:background="@drawable/rectangular_green_solid"
+            android:gravity="center" />
 
     </LinearLayout>
 
